--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ascend-accelerator</title>
+    <title>Consultoria Premium</title>
     <meta name="description" content="Consultoria Executiva Premium - Análise Completa do Seu Potencial de Liderança por apenas R$47. Descubra seus gaps críticos e acelere sua ascensão profissional." />
-    <meta name="author" content="Ascend Accelerator" />
+    <meta name="author" content="Layer Marketing" />
 
     <meta property="og:title" content="Consultoria Executiva Premium - R$47" />
     <meta property="og:description" content="Análise profissional completa que identifica precisamente seus gaps nos 5 elementos críticos da ascensão executiva." />
